--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>StartDocks eG  - ein Team, viele Ideen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,9 +23,9 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<h1 class="major">Wilkommen bei der<br />
+									StartDocks eG</h1>
+									<p>Wir sind eine Genossenschaft, die im Rahmen des Studiengangs "Gründung, Innovation, Führung" an der Hochschule Bremerhaven gegründet wurde. Gemeinsam arbeiten wir an vielen verschiedenen Geschäftsbereichen.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -38,8 +38,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">SmartDocks Shop</h2>
+									<p>Smart Homes bieten ihren Besitzern viele Vorteile. Dennoch ist der Smart Home Markt momentan vielen noch nicht greifbar. So nutzen gerade Erwachsene im mittleren Alterssegment von 35-44 Jahren Smart Home Lösungen. Jüngere scheinen auch am Thema interessiert. Allerdings ist der Einstieg in den Smart Home Markt stark vom Einkommen abhängig. Um auch jüngere für das Thema zu begeistern, wollen wir den günstigen Einstieg vereinfachen. Das heißt: Schritt für Schritt das Smart Home erweitern statt direkt die teure All-in-One Lösung für mehrere Tausend Euro zu installieren.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
