--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
+						<!-- Panel (Spotlight) SmartDocks -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">SmartDocks Shop</h2>
 									<p>Smart Homes bieten ihren Besitzern viele Vorteile. Dennoch ist der Smart Home Markt momentan vielen noch nicht greifbar. So nutzen gerade Erwachsene im mittleren Alterssegment von 35-44 Jahren Smart Home Lösungen. Jüngere scheinen auch am Thema interessiert. Allerdings ist der Einstieg in den Smart Home Markt stark vom Einkommen abhängig. Um auch jüngere für das Thema zu begeistern, wollen wir den günstigen Einstieg vereinfachen. Das heißt: Schritt für Schritt das Smart Home erweitern statt direkt die teure All-in-One Lösung für mehrere Tausend Euro zu installieren.</p>
+									<ul class="actions">
+											<li><a href="https://smartdocks.de/" class="button" target="_blank" rel="noopener noreferrer">Shop Besuchen</a></li>
+									</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
